--- a/app/views/main/_jobs.html.erb
+++ b/app/views/main/_jobs.html.erb
@@ -3,7 +3,7 @@
   <div class="name"><strong class="labelname"><%= @json_response["name"] %></strong></div>
   <div class="url"><strong class="labelname"><a target="_blank" href="<%= @json_response["url"] %>"><%= @json_response["url"] %></a></strong></div>
   <div class="joblist">
-    <% @json_response["jobs"].each do |job|%>
+    <% @json_response["jobs"].sort_by {|h| h["color"]}.reverse.each do |job|%>
        <div class="job media">
           <div class="media-left">
             <div class="media-object color img-circle <%=job['color']%>"></div>
