--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -108,6 +108,19 @@ body {
       border-bottom: 1px solid #eeeeee;
       margin-bottom: 30px;
     }
+    .wall {
+      margin-bottom: 20px;
+      .job {
+        text-align: center;
+        max-width: 235px;
+        .color {
+          display: inline-block;
+        }
+        .jobname {
+          font-size: 15px;
+        }
+      }
+    }
     .joblist  {
       .job {
         .jobname {
